--- a/admin-files/posts.html
+++ b/admin-files/posts.html
@@ -85,6 +85,11 @@
                         <span class="material-symbols-outlined">code</span>
                         <span class="text-sm font-medium leading-normal">Pages</span>
                     </a>
+                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
+                        href="/admin/settings">
+                        <span class="material-symbols-outlined">settings</span>
+                        <span class="text-sm font-medium leading-normal">Settings</span>
+                    </a>
                 </nav>
             </div>
             <!-- Logout Section -->
