--- a/admin-files/post_form.html
+++ b/admin-files/post_form.html
@@ -92,6 +92,10 @@
                                     <input type="text" id="tags" name="tags" class="form-input" placeholder="Comma separated tags">
                                 </div>
                                 <div class="form-group">
+                                    <label for="publishDate" class="form-label">Publish Date</label>
+                                    <input type="text" id="publishDate" name="publishDate" readonly class="form-input" placeholder="Not published yet">
+                                </div>
+                                <div class="form-group">
                                     <label for="content" class="form-label">Content</label>
                                     <textarea id="content" name="content" rows="10" class="form-textarea"></textarea>
                                 </div>
